use regex to detect capture crits (avoid flagging tcm2mat.cal files); fix div indicator color when scrolling content behind it; center crit line in window when opening capture view

--- a/scripts/base.css
+++ b/scripts/base.css
@@ -21,20 +21,25 @@
         background-repeat: no-repeat;
         padding: 0px;
     }
-
+/*
     button.tool img {
         position: relative;
         left: 0px;
         top: 0px;
+        padding: 0px;
+        border: 0px;
+        display: block;
+        margin: auto;
     }
+*/
    
     #plotLinksPopup {
-        overflow-y: scroll;
+        overflow-y: scroll !important;
         overflow-x: auto;
-        width: 20vw;
-        height: 50vh;    
+        width: 18vw;
+        height: 50vh;
         top: 45vh;
-        left: 3vw; 
+        left: 3vw;
     }
  
     .hamburger {
@@ -49,6 +54,29 @@
         box-shadow: 0 10px 0 1px #0000ff,0 16px 0 1px #0000ff,0 22px 0 1px #0000ff;
     }
     
+    .blinkfade {
+        animation: blink 1s infinite;
+        position: relative;
+        left: 0px;
+        top: 0px;
+        padding: 0px;
+        border: 0px;
+        display: block;
+        margin: 0px;
+    }
+
+    @keyframes blink {
+      0% {
+        opacity: 1;
+      }
+      50% {
+        opacity: 0;
+      }
+      100% {
+        opacity: 1;
+      }
+    }
+
     input { text-transform:none; }
 
     .jumpLink {
@@ -179,21 +207,29 @@
         display: none;
     }
 
+    #main {
+        overflow-y: none;
+    }
+
     #diveIndicator {
         display: none;
-        position: sticky;
+        position: sticky; 
         text-align: left;
         top: 2px;
         left: 2px;
-        z-index: 10;
+        z-index: 10; 
         font-size: 1rem;
         font-weight: bold;
+        background-color: #dddddd;
+        margin: 0px;
+        padding: 0px;
+        width: fit-content;
     }
 
     #plotlyPopperOuter {
         display: none;
         position: absolute;
-        top: 5px;
+        top: 30px;
         right: 5px;
         z-index: 10;
         font-size: 2rem;
@@ -230,6 +266,8 @@
     }
     #btnNotifications {
         background: url("images/notification-icon.png");
+        background-position: center;
+        background-repeat: no-repeat;
     }
     #btnCapFile {
         background: url("images/cap-none-icon.png");
@@ -275,9 +313,9 @@
             height:50px; 
             display: grid;
             overflow-x: auto;
-            overflow-y: none;
+            overflow-y: none; 
             grid-template-columns: max-content 1fr max-content;
-            grid-template-rows: 50px;
+            grid-template-rows: 1fr; /* 50px; */
             grid-template-areas:
                 "top . bottom";
             column-gap: 2px;
@@ -888,18 +926,3 @@ table {
     color: #000000;
 }
 
-.blinkfade {
-    animation: blink 1s infinite;
-}
-
-@keyframes blink {
-  0% {
-    opacity: 1;
-  }
-  50% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
-  }
-}
